@@ -17,6 +17,26 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -675,6 +695,195 @@ argument_list|)
 operator|.
 name|trim
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|test_Execute_MultipleArrayBind
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SQLExec
+name|inserter
+init|=
+name|SQLExec
+operator|.
+name|query
+argument_list|(
+literal|"INSERT INTO ARTIST (ARTIST_ID, ARTIST_NAME) VALUES (#bind($id), #bind($name))"
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|2
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|QueryResult
+argument_list|<
+name|?
+argument_list|>
+name|result
+init|=
+name|inserter
+operator|.
+name|paramsArray
+argument_list|(
+name|i
+argument_list|,
+literal|"artist "
+operator|+
+name|i
+argument_list|)
+operator|.
+name|execute
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|result
+operator|.
+name|firstUpdateCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|dbHelper
+operator|.
+name|getRowCount
+argument_list|(
+literal|"ARTIST"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|test_Execute_MultipleMapBind
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SQLExec
+name|inserter
+init|=
+name|SQLExec
+operator|.
+name|query
+argument_list|(
+literal|"INSERT INTO ARTIST (ARTIST_ID, ARTIST_NAME) VALUES (#bind($id), #bind($name))"
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|2
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|params
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|put
+argument_list|(
+literal|"id"
+argument_list|,
+name|i
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|put
+argument_list|(
+literal|"name"
+argument_list|,
+literal|"artist "
+operator|+
+name|i
+argument_list|)
+expr_stmt|;
+name|QueryResult
+argument_list|<
+name|?
+argument_list|>
+name|result
+init|=
+name|inserter
+operator|.
+name|params
+argument_list|(
+name|params
+argument_list|)
+operator|.
+name|execute
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|result
+operator|.
+name|firstUpdateCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|dbHelper
+operator|.
+name|getRowCount
+argument_list|(
+literal|"ARTIST"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
